style: Fix margin and alignment of portfolio section buttons

--- a/new/css/style.css
+++ b/new/css/style.css
@@ -266,16 +266,32 @@ body {
 	background-color:rgba(255, 255, 255, 0.8);
 }
 
-.filter a {
-	color: #fff;
-	border: 1px solid #fff;
-	padding: 10px 18px;
-	display: block;
+.filter {
+	text-align: center;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.filter ul {
+	display: inline-block;
+  padding: 5px;
+  margin: auto;
+  width: 100%;
 }
 
 .filter li {
 	display: inline-block;
-	padding: 5px
+  padding: 5px;
+}
+
+.filter a {
+	color: #fff;
+	border: 1px solid #fff;
+  display: block;
+  width: 100px;
+  line-height: 40px;
+
 }
 
 .filter .current:focus {
@@ -284,16 +300,12 @@ body {
   color: #000000;
 }
 
+
 .filter a:hover {
 	background-color: rgba(255, 255, 255, 0.8);;
 	border-color: #fff;
   color: #000000;
   text-decoration: none;
-}
-
-.filter {
-	text-align: center;
-	width: 100%;
 }
 
 .statsSection .heading {
@@ -309,6 +321,7 @@ body {
 
 .itemsContainer {
   width: 100%;
+  margin-top: 50px;
 }
 
 
